examples/test/testpolicy16837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16837
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key22: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value11
          key38: value43
      podSelector:
        matchLabels:
          key46: value27
          key21: value2
          key43: value18
